# HydrodynamicsFOPT

./: .gitignore  README.md  hydrodynamics.py  pyproject.toml  requirements.txt
src/HydrodynamicsFOPT/: __init__.py  hydrodynamics.py  matchingResult.py
src/HydrodynamicsFOPT/entropyProduction/: ballisticIntegrals.py  entropyBallistic.py  entropyBase.py  entropyInterpolated.py  entropyNLTE.py  integrals.py
